[package]
name = "maelstrom-rs"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "echo"
path = "src/bin/echo.rs"

[[bin]]
name = "unique"
path = "src/bin/unique-id.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = {version = "1.0.70", features = ["std"]}
serde = {version = "1.0.159", features = ["derive"]}
serde_json = "1.0.95"

